Fixed services page spacing

--- a/style.css
+++ b/style.css
@@ -594,7 +594,8 @@ h5.the-title {
 
 .projects-block {
   background: #f5f5f5;
-  padding: 40px 0 80px 0;
+  /* padding: 40px 0 80px 0; */
+  margin-bottom: -35px;
 }
 
 .project-text-wrap {
